landing page fix

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <p class="banner">✧･ﾟ: *✧･ﾟ:* Happy Pisces season ✧･ﾟ: *✧･ﾟ:*</p>
 
-    <div class="main">
+    <!-- <div class="main">
         <h2>Hi, I'm Catu.</h2>
 
 
@@ -19,7 +19,36 @@
             , mainly in the world of ~code security~. </p>
 
 
+    </div> -->
+
+    <div class="main">
+
+        <table>
+            <tr>
+                <td style="padding: 0 0 0 1em;" colspan="2">
+                    <p>Welcome to my website...</p>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <h1>I'm Catu and I live in Brooklyn.</h1>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <p>I design experiences at <a href="https://GitHub.com">GithHub</a>
+                        , mainly in the world of ~code security~. </p>
+                </td>
+            </tr>
+            <tr>
+                <td style="text-align: left">Something cool here</td>
+                <td style="text-align: left">And even cooler here</td>
+            </tr>
+        </table>
+
     </div>
+
+
 
 </body>
 
