--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-    <p class="banner">✧･ﾟ: *✧･ﾟ:* Happy Pisces season ✧･ﾟ: *✧･ﾟ:*</p>
+
+    <div class="banner">
+        <marquee>
+            <p>✧･ﾟ: *✧･ﾟ:* Happy Pisces season ✧･ﾟ: *✧･ﾟ:*</p>
+        </marquee>
+    </div>
+
 
     <!-- <div class="main">
         <h2>Hi, I'm Catu.</h2>
@@ -25,7 +31,7 @@
 
         <table>
             <tr>
-                <td style="padding: 0 0 0 1em;" colspan="2">
+                <td class="late" style="padding: 0 0 0 1em;" colspan="2">
                     <p>Welcome to my website...</p>
                 </td>
             </tr>
@@ -40,10 +46,30 @@
                         , mainly in the world of ~code security~. </p>
                 </td>
             </tr>
+
             <tr>
-                <td style="text-align: left">Something cool here</td>
-                <td style="text-align: left">And even cooler here</td>
+                <td class="late" colspan="2">
+                    <p>As of late...<late class=""></late>
+                    </p>
+                </td>
             </tr>
+
+            <tr>
+                <td style="text-align: left">
+                    <figure>
+                        <img src="img/dog.jpeg" alt="A dog on a leash facing away from the camera">
+                        <figcaption>nice dog at apollo's bagels</figcaption>
+                    </figure>
+                </td>
+                <td style="text-align: left">
+                    <figure>
+                        <img src="img/treats.jpeg" alt="Cherry brownie and blueberry lemon cake on a plate">
+                        <figcaption>blueberry lemon cake and cherry brownie from mya's</figcaption>
+                    </figure>
+                </td>
+            </tr>
+
+
         </table>
 
     </div>
