--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h2>Hi, I'm Catu.</h2>
 
 
-        <p>I design experiences at <a href="https://GitHub.com">GithHub</a>
+        <p>I design experiences at <a href="https://GitHub.com">GitHub</a>
             , mainly in the world of ~code security~. </p>
 
 
